Refactor code and add Swagger documentation
